test-app_scen1/kube-objects/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uid-app-service
spec:
  selector:
    app: uid-app
  type: ClusterIP #Default, does not need to be specified
  ports:
    - protocol: TCP
      name: http-app1
      port: 3000
      #targetPort: 3000
    # - protocol: TCP
    #   name: http-app1a
    #   port: 4000
    #   #targetPort: 4000
