test-app_scen1/kube-objects/simpleapp-istio-virtualservices.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ip-app1-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - test-gateway
  http:
  - match:
    - uri:
        exact: /app1
    route:
    - destination:
        host: uid-app-service
        port:
          number: 3000
  # - match:
  #   - uri:
  #       exact: /app1a
  #   route:
  #   - destination:
  #       host: ip-app1-service
  #       port:
  #         number: 4000
